--- a/templates/form.html
+++ b/templates/form.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enviar Mensagem no WhatsApp</title>
-    <!-- Google Fonts para fontes modernas -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome para ícones -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- CSS Personalizado -->
     <link rel="stylesheet" href="{{ url_for('static', filename='form.css') }}">
+    <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@latest/index.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <!-- Carregar o CDN da biblioteca de países -->
+    <script src="https://cdn.jsdelivr.net/npm/country-list-with-dial-code-and-flag@latest/dist/main.js"></script>
 </head>
+
 <body>
-    <!-- Container Principal -->
     <div class="main-container">
         <div class="form-container shadow-lg">
             <h1 class="title">Enviar Mensagem no WhatsApp</h1>
@@ -22,9 +25,7 @@
                 <label for="country" class="input-label">País</label>
                 <div class="select-wrapper">
                     <span class="icon"><i class="fas fa-globe"></i></span>
-                    <select class="input-select" id="country">
-                        <!-- Lista de países será preenchida via JavaScript -->
-                    </select>
+                    <select class="input-select" id="country"></select>
                 </div>
             </div>
 
@@ -43,9 +44,11 @@
                 <div class="input-wrapper">
                     <span class="icon"><i class="fas fa-comment"></i></span>
                     <textarea class="input-field" id="message" rows="4" placeholder="Digite sua mensagem"></textarea>
+                    <button type="button" id="emoji-btn" class="emoji-btn-c"><i class="fas fa-smile"></i></button>
                 </div>
+                <div id="emoji-picker" class="emoji-picker"></div> <!-- Contêiner para emojis -->
             </div>
-
+            
             <!-- Botão de Envio -->
             <button type="button" class="send-btn" onclick="sendMessage()">
                 <i class="fas fa-paper-plane"></i> Enviar
@@ -53,13 +56,16 @@
         </div>
 
         <!-- Menu de Navegação -->
-        <button class="menu-toggle-btn" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
-        <div class="menu" id="menu">
+        <button class="menu-toggle-btn"><i class="fas fa-bars"></i></button>
+        <div class="menu" id="menu" style="display: none;">
             <ul class="menu-list">
                 <li><a href="/register">Cadastrar</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/create_list">Criar Lista</a></li>
+                <li><a href="#" id="migrate-plan">Migrar Plano</a></li>
             </ul>
+        </div>
+
         </div>
     </div>
 
@@ -68,5 +74,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='form.js') }}"></script>
+    <script src="{{ url_for('static', filename='emoji-picker.js') }}"></script>
+    <script src="{{ url_for('static', filename='stripe_plans.js') }}"></script>
 </body>
 </html>
