--- a/api/templates/form.html
+++ b/api/templates/form.html
@@ -73,7 +73,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-    <script src="{{ url_for('static', filename='form.js') }}"></script>
+    <script src="{{ url_for('static', filename='form_scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='emoji-picker.js') }}"></script>
     <script src="{{ url_for('static', filename='stripe_plans.js') }}"></script>
 </body>
