--- a/api/templates/form.html
+++ b/api/templates/form.html
@@ -100,12 +100,11 @@
     <!-- Informações Adicionais -->
     <div class="container mt-5">
         <h2>Sobre Nós</h2>
-        <p>Descrição da empresa e dos serviços oferecidos.</p>
+        <p>Envia mensagem via WhatsApp sem necessidade de ter o contato salvo!</p>
 
         <h2>Contato</h2>
-        <p>Email: contato@minhaempresa.com<br>
-           Telefone: (11) 1234-5678<br>
-           Endereço: Rua Exemplo, 123, Cidade, Estado, CEP</p>
+        <p>Email: felipe-adm@outlook.com.br<br>
+           Telefone: (51) 984866460<br></p>
 
         <h2>Políticas</h2>
         <p><a href="/politica-de-devolucoes">Política de Devoluções</a></p>
