--- a/api/templates/form.html
+++ b/api/templates/form.html
@@ -100,20 +100,21 @@
     <!-- Informações Adicionais -->
     <div class="container mt-5">
         <h2>Sobre Nós</h2>
-        <p>Envia mensagem via WhatsApp sem necessidade de ter o contato</p>
+        <p>Envia mensagem via WhatsApp sem necessidade de ter o contato salvo!</p>
 
         <h2>Contato</h2>
         <p>Email: felipe-adm@outlook.com.br<br>
-           Telefone: (51) 984866460<br></p>
+        Telefone: (51) 984866460<br></p>
 
         <h2>Políticas</h2>
-        <p><a href="/politica-de-devolucoes">Política de Devoluções</a></p>
-        <p><a href="/politica-de-reembolsos">Política de Reembolsos e Contestações</a></p>
-        <p><a href="/politica-de-cancelamento">Política de Cancelamento</a></p>
+        <p><a href="/politica-de-devolucoes.html">Política de Devoluções</a></p>
+        <p><a href="/politica-de-reembolsos.html">Política de Reembolsos e Contestações</a></p>
+        <p><a href="/politica-de-cancelamento.html">Política de Cancelamento</a></p>
 
         <h2>Termos e Condições</h2>
-        <p><a href="/termos-e-condicoes">Termos e Condições</a></p>
+        <p><a href="/termos-e-condicoes.html">Termos e Condições</a></p>
     </div>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
