--- a/api/templates/form.html
+++ b/api/templates/form.html
@@ -107,14 +107,13 @@
         Telefone: (51) 984866460<br></p>
 
         <h2>Políticas</h2>
-        <p><a href="/politica-de-devolucoes.html">Política de Devoluções</a></p>
-        <p><a href="/politica-de-reembolsos.html">Política de Reembolsos e Contestações</a></p>
-        <p><a href="/politica-de-cancelamento.html">Política de Cancelamento</a></p>
+        <p><a href="/politica-de-devolucoes">Política de Devoluções</a></p>
+        <p><a href="/politica-de-reembolsos">Política de Reembolsos e Contestações</a></p>
+        <p><a href="/politica-de-cancelamento">Política de Cancelamento</a></p>
 
         <h2>Termos e Condições</h2>
-        <p><a href="/termos-e-condicoes.html">Termos e Condições</a></p>
+        <p><a href="/termos-e-condicoes">Termos e Condições</a></p>
     </div>
-
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
