--- a/api/templates/form.html
+++ b/api/templates/form.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="/create_list">Criar Lista</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="migrate-plan">Migrar Plano</a>
+                        <a class="nav-link" href="#" id="rate-planmig">Migrar Plano</a>
                     </li>
                     <li class="nav-item">
                         <div id="subscription-action"></div> <!-- Placeholder para o botão dinâmico -->
